--- a/Public/chat.html
+++ b/Public/chat.html
@@ -31,12 +31,7 @@
             <li>Mike</li>
           </ul>
         </div>
-        <div class="chat-messages">
-          <div class="message">
-            <p class="meta">Name <span>Time pm</span></p>
-            <p class="text">Hello</p>
-          </div>
-        </div>
+        <div class="chat-messages"></div>
       </main>
       <div class="chat-form-container">
         <form id="chat-form">
@@ -51,6 +46,12 @@
         </form>
       </div>
     </div>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.11.0/qs.min.js"
+      integrity="sha512-/l6vieC+YxaZywUhmqs++8uF9DeMvJE61ua5g+UK0TuHZ4TkTgB1Gm1n0NiA86uEOM9JJ6JUwyR0hboKO0fCng=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="js/main.js"></script>
   </body>
